# XP-CMake

./: CMakeLists.txt  README.md  XP-CMakeConfig.cmake  install.bat
modules/: Assert.cmake  CPU.cmake  Compiler.cmake  Installing.cmake  Main.cmake  OS.cmake
scripts/: CPU_DetectHostArchitecture.c  CPU_DetectHostFeatures_x86_windows.c
src/: Compiler.cmake
